# MCU_FPGA-Crypto_Wallet

ETH/c_signer/: .gitignore  CMakeLists.txt  README.md
anvil_cold_wallet/c_signer/: CMakeLists.txt  README.md
anvil_cold_wallet/c_signer/include/: private_key.example.h
anvil_cold_wallet/c_signer/src/: eth_signer.c
anvil_cold_wallet/c_signer/verilog_rtl/: Makefile  README.md
anvil_cold_wallet/c_signer/verilog_rtl/gowin/: acg525.cst  acg525.sdc  acg525_selftest_top.sv  eth_signer_acg525.gprj
anvil_cold_wallet/c_signer/verilog_rtl/gowin/impl/: eth_signer_acg525_process_config.json
anvil_cold_wallet/c_signer/verilog_rtl/gowin/impl/gwsynthesis/: eth_signer_acg525.prj  eth_signer_acg525_syn.rpt.html  eth_signer_acg525_syn_resource.html  eth_signer_acg525_syn_rsc.xml
anvil_cold_wallet/c_signer/verilog_rtl/rtl/: aes256_decrypt_core.sv  crypvault_fpga_top.sv  eip1559_rlp_encoder.sv  eth_hash_signer_core.sv  eth_secp256k1_pkg.sv  eth_signer_core.sv  hmac_sha256_32byte_key.sv  keccak256_stream.sv  modaddsub256_seq.sv  modinv256.sv  private_key_rtl.example.svh  rfc6979_hmac_sha256.sv  rfc6979_nonce.sv  sha256_stream.sv  spi_mcu_fpga_bridge.sv  trng_ring_oscillator.sv  uart_hash_signer_bridge.sv  uart_rx_8n1.sv
anvil_cold_wallet/c_signer/verilog_rtl/tb/: tb_acg525_selftest.sv  tb_hmac_rfc6979.sv  tb_keccak.sv  tb_modmath.sv  tb_rlp_encoder.sv  tb_sha256.sv
anvil_cold_wallet/c_signer/verilog_rtl/tests/: compare_c_rtl_hash.py
anvil_cold_wallet/c_signer/verilog_sim/: Makefile
anvil_cold_wallet/c_signer/verilog_sim/questa/: run_cli.do
anvil_cold_wallet/c_signer/verilog_sim/rtl/: eth_signer_model.sv  eth_signer_pkg.sv
(+419 files in other folders)
